added libraries and initial analysis of dataset

--- a/AndresSuarez_Proyecto_01.ipynb
+++ b/AndresSuarez_Proyecto_01.ipynb
@@ -17,7 +17,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.3"
+      "version": "3.8.5-final"
     },
     "colab": {
       "name": "DS_Proyecto_01.ipynb",
@@ -127,9 +127,11 @@
         "id": "fCGVacN5C4OM"
       },
       "source": [
-        "# COMPLETAR - AGREGAR TANTAS CELDAS COMO SEA NECESARIO"
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -147,10 +149,72 @@
         "id": "YL2eAd_tC4Oa"
       },
       "source": [
-        "# COMPLETAR - AGREGAR TANTAS CELDAS COMO SEA NECESARIO"
+        "data = pd.read_csv(\"DS_Proyecto_01_Datos_Properati.csv\")\n",
+        "print(f\"Numero de filas: {data.shape[0]}\")\n",
+        "print(f\"Numero de Columnas: {data.shape[1]}\")\n",
+        "data.head()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Numero de filas: 146660\nNumero de Columnas: 19\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "   start_date    end_date  created_on        lat        lon         l1  \\\n",
+              "0  2019-10-17  2019-12-23  2019-10-17 -34.605880 -58.384949  Argentina   \n",
+              "1  2019-10-17  2019-11-21  2019-10-17 -34.624056 -58.412110  Argentina   \n",
+              "2  2019-10-17  2019-11-01  2019-10-17 -34.593569 -58.427474  Argentina   \n",
+              "3  2019-10-17  2019-12-23  2019-10-17 -34.581294 -58.436754  Argentina   \n",
+              "4  2019-10-17  2020-03-11  2019-10-17 -34.914194 -57.938219  Argentina   \n",
+              "\n",
+              "                       l2             l3  rooms  bedrooms  bathrooms  \\\n",
+              "0         Capital Federal  San Cristobal    7.0       7.0        2.0   \n",
+              "1         Capital Federal          Boedo    2.0       1.0        2.0   \n",
+              "2         Capital Federal        Palermo    2.0       1.0        1.0   \n",
+              "3         Capital Federal        Palermo    2.0       1.0        1.0   \n",
+              "4  Bs.As. G.B.A. Zona Sur       La Plata    2.0       1.0        1.0   \n",
+              "\n",
+              "   surface_total  surface_covered     price currency  \\\n",
+              "0          140.0            140.0  153000.0      USD   \n",
+              "1           70.0             58.0  159000.0      USD   \n",
+              "2           45.0             45.0  125000.0      USD   \n",
+              "3           85.0             50.0  295000.0      USD   \n",
+              "4           50.0             35.0   40000.0      USD   \n",
+              "\n",
+              "                                               title  \\\n",
+              "0        ***Venta semipiso centro, ideal hostel*****   \n",
+              "1   Espectacular PH reciclado en Boedo sin expensas.   \n",
+              "2  Depto.tipo casa de 2 ambientes en Venta en Pal...   \n",
+              "3  COSTA RICA 5800 / PALERMO HOLLYWOOD / VENTA PH...   \n",
+              "4  58 entre 1 y 2  Venta de departamento en ph.1 ...   \n",
+              "\n",
+              "                                         description property_type  \\\n",
+              "0  DESCRIPCION DE LA PROPIEDAD: Departamento de 1...  Departamento   \n",
+              "1   PH reciclado en Boedo a una cuadra de la plaz...            PH   \n",
+              "2  2 ambienets amplio , excelente estado , patio ...            PH   \n",
+              "3  HERMOSO PH EN PALERMO!!!2 AMBIENTES TOTALMENTE...            PH   \n",
+              "4  58 entre 1 y 2  Venta de departamento en PH. P...            PH   \n",
+              "\n",
+              "  operation_type  \n",
+              "0          Venta  \n",
+              "1          Venta  \n",
+              "2          Venta  \n",
+              "3          Venta  \n",
+              "4          Venta  "
+            ],
+            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>start_date</th>\n      <th>end_date</th>\n      <th>created_on</th>\n      <th>lat</th>\n      <th>lon</th>\n      <th>l1</th>\n      <th>l2</th>\n      <th>l3</th>\n      <th>rooms</th>\n      <th>bedrooms</th>\n      <th>bathrooms</th>\n      <th>surface_total</th>\n      <th>surface_covered</th>\n      <th>price</th>\n      <th>currency</th>\n      <th>title</th>\n      <th>description</th>\n      <th>property_type</th>\n      <th>operation_type</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2019-10-17</td>\n      <td>2019-12-23</td>\n      <td>2019-10-17</td>\n      <td>-34.605880</td>\n      <td>-58.384949</td>\n      <td>Argentina</td>\n      <td>Capital Federal</td>\n      <td>San Cristobal</td>\n      <td>7.0</td>\n      <td>7.0</td>\n      <td>2.0</td>\n      <td>140.0</td>\n      <td>140.0</td>\n      <td>153000.0</td>\n      <td>USD</td>\n      <td>***Venta semipiso centro, ideal hostel*****</td>\n      <td>DESCRIPCION DE LA PROPIEDAD: Departamento de 1...</td>\n      <td>Departamento</td>\n      <td>Venta</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2019-10-17</td>\n      <td>2019-11-21</td>\n      <td>2019-10-17</td>\n      <td>-34.624056</td>\n      <td>-58.412110</td>\n      <td>Argentina</td>\n      <td>Capital Federal</td>\n      <td>Boedo</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>2.0</td>\n      <td>70.0</td>\n      <td>58.0</td>\n      <td>159000.0</td>\n      <td>USD</td>\n      <td>Espectacular PH reciclado en Boedo sin expensas.</td>\n      <td>PH reciclado en Boedo a una cuadra de la plaz...</td>\n      <td>PH</td>\n      <td>Venta</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2019-10-17</td>\n      <td>2019-11-01</td>\n      <td>2019-10-17</td>\n      <td>-34.593569</td>\n      <td>-58.427474</td>\n      <td>Argentina</td>\n      <td>Capital Federal</td>\n      <td>Palermo</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>45.0</td>\n      <td>45.0</td>\n      <td>125000.0</td>\n      <td>USD</td>\n      <td>Depto.tipo casa de 2 ambientes en Venta en Pal...</td>\n      <td>2 ambienets amplio , excelente estado , patio ...</td>\n      <td>PH</td>\n      <td>Venta</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2019-10-17</td>\n      <td>2019-12-23</td>\n      <td>2019-10-17</td>\n      <td>-34.581294</td>\n      <td>-58.436754</td>\n      <td>Argentina</td>\n      <td>Capital Federal</td>\n      <td>Palermo</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>85.0</td>\n      <td>50.0</td>\n      <td>295000.0</td>\n      <td>USD</td>\n      <td>COSTA RICA 5800 / PALERMO HOLLYWOOD / VENTA PH...</td>\n      <td>HERMOSO PH EN PALERMO!!!2 AMBIENTES TOTALMENTE...</td>\n      <td>PH</td>\n      <td>Venta</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2019-10-17</td>\n      <td>2020-03-11</td>\n      <td>2019-10-17</td>\n      <td>-34.914194</td>\n      <td>-57.938219</td>\n      <td>Argentina</td>\n      <td>Bs.As. G.B.A. Zona Sur</td>\n      <td>La Plata</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>50.0</td>\n      <td>35.0</td>\n      <td>40000.0</td>\n      <td>USD</td>\n      <td>58 entre 1 y 2  Venta de departamento en ph.1 ...</td>\n      <td>58 entre 1 y 2  Venta de departamento en PH. P...</td>\n      <td>PH</td>\n      <td>Venta</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -167,10 +231,18 @@
         "id": "1QletBbgC4Oi"
       },
       "source": [
-        "#   COMPLETAR - AGREGAR TANTAS CELDAS COMO SEA NECESARIO"
+        "data.info()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 146660 entries, 0 to 146659\nData columns (total 19 columns):\n #   Column           Non-Null Count   Dtype  \n---  ------           --------------   -----  \n 0   start_date       146660 non-null  object \n 1   end_date         146660 non-null  object \n 2   created_on       146660 non-null  object \n 3   lat              136735 non-null  float64\n 4   lon              136701 non-null  float64\n 5   l1               146660 non-null  object \n 6   l2               146660 non-null  object \n 7   l3               146660 non-null  object \n 8   rooms            146660 non-null  float64\n 9   bedrooms         146660 non-null  float64\n 10  bathrooms        140703 non-null  float64\n 11  surface_total    126133 non-null  float64\n 12  surface_covered  125046 non-null  float64\n 13  price            146660 non-null  float64\n 14  currency         146660 non-null  object \n 15  title            146660 non-null  object \n 16  description      146660 non-null  object \n 17  property_type    146660 non-null  object \n 18  operation_type   146660 non-null  object \ndtypes: float64(8), object(11)\nmemory usage: 15.1+ MB\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
